# avplayer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
AV/include/: IGLContext.h  IVideoFilter.h
AV/src/Core/: SyncNotifier.cpp  SyncNotifier.h  TaskPool.cpp  TaskPool.h
AV/src/Define/: BaseDef.h  IAVPacket.h  IAudioSamples.h  IVideoFrame.h
AV/src/Display/: VideoDisplay.cpp  VideoDisplay.h
AV/src/Engine/: AVSynchronizer.cpp  AVSynchronizer.h  AudioRender.cpp  AudioRender.h  GLContext.cpp  IGLContext.h
AV/src/FaceDetect/: IFaceLandmarkDetector.h  OpenCVLbfFaceLandmarkDetector.cpp  OpenCVLbfFaceLandmarkDetector.h  StickerPlacementEstimator.cpp  StickerPlacementEstimator.h
AV/src/Network/: NetworkSession.cpp  NetworkSession.h
AV/src/Reader/: AudioDecoder.cpp  AudioDecoder.h  DeMuxer.cpp  DeMuxer.h  FileReader.cpp  FileReader.h  MiniDecoder.cpp  MiniDecoder.h  VideoDecoder.cpp  VideoDecoder.h  VideoRender.cpp  VideoRender.h
AV/src/Reader/Interface/: IAudioDecoder.h  IDeMuxer.h  IFileReader.h  IVideoDecoder.h
AV/src/VideoFilter/: FlipVerticalFilter.cpp  FlipVerticalFilter.h  GrayFilter.cpp  GrayFilter.h  InvertFilter.cpp  InvertFilter.h  StickerFilter.cpp  StickerFilter.h  VideoFilter.cpp  VideoFilter.h
AV/src/Writer/: AudioEncoder.cpp  AudioEncoder.h  IMediaWriter.h  IMuxer.h  IRecordSession.h  IRecorder.h  MediaWriter.h  Mp4Muxer.cpp  Mp4Muxer.h  Muxer.cpp  Muxer.h  RecordSession.cpp  RecordSession.h  Recorder.cpp  Recorder.h  VideoEncoder.cpp  VideoEncoder.h
AV/src/Writer/Interface/: IAudioEncoder.h  IVideoEncoder.h
qt/: Main.cpp  MainWindow.cpp  MainWindow.h
qt/UI/: ClickableSlider.h  ControllerWidget.cpp  ControllerWidget.h  PlayerWidget.cpp  PlayerWidget.h
